[package]
name = "intder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "irreps"
path = "src/bin/irreps.rs"

[dependencies]
approx = "0.5.1"
nalgebra = { version = "0.32.5", features = ["serde-serialize"] }
ndarray = { version = "0.15.6", features = ["approx-0_5"] }
psqs = { git = "https://github.com/ntBre/psqs" }
regex = "1.10.3"
serde = "1.0.196"
symm = { git = "https://github.com/ntBre/symm" }
